# bayesian-models

./: .fuse_hidden0002d3c200000001  .gitignore  .readthedocs.yaml  README.md  dev-requirements.txt  dev_requirements.txt  pyproject.toml  pyproject.toml.old  requirements.txt  setup.py.old
bayesian_models/: __init__.py  bayesian_models.py  core.py  data.py  math.py  models.py  pyproject.toml  typing.py  utilities.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api_ref/: bayesian_models.rst  index.rst  modules.rst
docs/source/api_ref/framework/: data.rst  model_builder.rst
docs/source/api_ref/models/: best.rst
docs/source/discussions/: core.rst  data_handling.rst  documentation.rst  index.rst  intro.rst  model_interface.rst
docs/source/discussions/models/: best.rst  index.rst
docs/source/guides/: best_params.rst  index.rst
docs/source/tutorials/: best.rst  index.rst  installation.rst  quickstart.rst
tests/: BEST_test.py  BEST_tests.py  GP_test.py  core_modelbuilder_test.py  data_module_test.py  test_data_adaptors.py  utilities_test.py
