[build-system]

requires = ['setuptools>=61.0']

build-backend = 'setuptools.build_meta'

[project]

name = "bayesian_models"

version = "0.0.1"

authors = [
  { name="Alexander Rodis", email="alexanderrhodis@gmail.com" },
]

maintainers = [
    { name="Alexander Rodis", email="alexanderrhodis@gmail.com" },
]

description = "A package for building common bayesian models in pymc"

readme = 'README.md'

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT Licence",
    "Operating System :: OS Independent",
]

dependencies = [   
        'pymc>=5.0.2',
        'scikit-learn>=1.2.1',
        'interval',
        ]

[project.urls]

"Homepage" = "https://github.com/AlexRodis/bayesian_models"

"Bug Tracker" = "https://github.com/AlexRodis/bayesian_models/issues"

[project.optional-dependencies]
GPU = [
	'jax==0.4.1',
	'jaxlib==0.4.1',
]

dev = [
  'jax==0.4.1',
  'jaxlib==0.4.1',
  'sphinx',
  'sphinx-rtd-theme',
  'sphinxcontrib-katex',
  'esbonio>=0.12.0',
  'mypy',
]

[tool.setuptools]

packages = ["bayesian_models"]
