[project]

name = "bayesian-models"

version = "0.0.3"

authors = [
  { name="Alexander Rodis", email="alexanderrhodis@gmail.com" },
]

maintainers = [
    { name="Alexander Rodis", email="alexanderrhodis@gmail.com" },
]

description = "A package for building common bayesian models in pymc"

readme = 'README.md'

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",

]

keywords = ["bayesian", "models", "statistics", "pymc"]

[project.urls]

"Homepage" = "https://github.com/AlexRodis/bayesian_models"

"Bug Tracker" = "https://github.com/AlexRodis/bayesian_models/issues"


[tool.setuptools]

packages = ["bayesian_models"]
