[project]

name = "bayesian-models"

version = "0.0.6"

authors = [
  { name="Alexander Rodis", email="alexanderrhodis@gmail.com" },
]

maintainers = [
    { name="Alexander Rodis", email="alexanderrhodis@gmail.com" },
]

description = "A package for building common bayesian models in pymc"

readme = 'README.md'

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",

]

keywords = ["bayesian", "models", "statistics", "pymc"]

dependencies = [
  'interval>=1.1', 'pymc>=5.1.2',
  'sklearn>=1.2.2',
]

[project.optional-dependencies]
GPU = [
  'jax',
  'jaxlib',
  'numpyro',
]
dev = [
  'sphinx',
  'sphinxcontrib-katex',
  'sphinx-rtd-theme',
]


[project.urls]

"Homepage" = "https://github.com/AlexRodis/bayesian_models"

"Bug Tracker" = "https://github.com/AlexRodis/bayesian_models/issues"

[build-system]
requires = ["setuptools"]


[tool.setuptools]

packages = ["bayesian_models"]
